# the-film-atlas

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: DATA_IMPLEMENTATION_REPORT.md  GMAP_TERRITORY_ENGINE_PLAN.md  MILESTONE_1.md  MILESTONE_2.md  Website update.rtf
docs/technical_writeup_references/: 00_compact_technical_writeup_reference.md  01_project_brief.md  03_ui_ux_implementation_report.md  04_milestone_5_exploratory_classification_upgrade.md  06_milestone_5_final_validation.md  08_milestone_5_deep_audit.md  09_milestone_5_large_audit_2k_final.md  11_milestone_5_bucket_scan.md  README.md  (+3 more)
film_atlas/: __init__.py  classification_v2.py  cli.py  cluster.py  cluster_labels.py  cluster_sweep.py  clustering_methods.py  config.py  embedding.py  embedding_cache.py  external_sources.py  fetch.py  inspect_clusters.py  large_audit.py  milestone2_report.py  milestone4.py  models.py  neighbors.py  normalize.py  profiles.py  reduce.py  report.py  review_ablation.py  sample_map.py  territory_layout.py  tmdb_client.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.mjs  vercel.json
tests/: test_classification_v2.py  test_cluster_evidence.py  test_cluster_labels.py  test_cluster_sweep.py  test_clustering_methods.py  test_embedding_cache.py  test_embedding_estimate.py  test_fetch.py  test_large_audit.py  test_milestone2_report.py  test_milestone4.py  test_neighbors.py  test_normalize.py  test_pipeline_outputs.py  test_profiles.py  test_reduce_cluster.py  test_report.py  test_review_ablation.py  test_territory_layout.py  test_tmdb_client.py
(+139 files in other folders)
