[project]
name = "film-atlas"
version = "0.1.0"
description = "Offline TMDb data pipeline for The Film Atlas."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "networkx>=3.4",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
    "python-dotenv>=1.0.1",
    "scikit-learn>=1.5.2",
    "typer>=0.15.1",
    "umap-learn>=0.5.12",
]

[project.scripts]
film-atlas = "film_atlas.cli:app"

[dependency-groups]
dev = [
    "hdbscan>=0.8.43",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["film_atlas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
